@@ -50,17 +50,17 @@ public class Compiler {
     private File classpathTmpFile;
     private List<String> errors = new LinkedList<String>();
     private List<String> warnings = new LinkedList<String>();
-    
+
     public Compiler() {
     }
-    
+
     public List<String> getErrors() {
         return errors;
     }
     public List<String> getWarnings() {
         return warnings;
     }
-    
+
     public void setMaxMemory(long l) {
         maxMemory = l;
     }
@@ -83,7 +83,7 @@ public class Compiler {
     public void setClassPath(String s) {
         classPath = StringUtils.isEmpty(s) ? null : s;
     }
-    
+
     protected void addArgs(List<String> list) {
         if (!StringUtils.isEmpty(encoding)) {
             list.add("-encoding");
@@ -100,7 +100,7 @@ public class Compiler {
             list.add("-d");
             list.add(outputDir);
         }
-        
+
         if (StringUtils.isEmpty(classPath)) {
             String javaClasspath = SystemPropertyAction.getProperty("java.class.path");
             boolean classpathSetted = javaClasspath != null ? true : false;
@@ -109,7 +109,7 @@ public class Compiler {
                 f = new File(f, "../lib");
                 if (f.exists() && f.isDirectory()) {
                     list.add("-extdirs");
-                    list.add(f.toString());                    
+                    list.add(f.toString());
                 }
             } else {
                 list.add("-classpath");
@@ -122,14 +122,14 @@ public class Compiler {
 
     }
     public boolean compileFiles(File[] files) {
-        List<String> f = new ArrayList<String>(files.length);
+        List<String> f = new ArrayList<>(files.length);
         for (File file : files) {
             f.add(file.getAbsolutePath());
         }
         return compileFiles(f.toArray(new String[files.length]));
     }
     public boolean compileFiles(List<File> files) {
-        List<String> f = new ArrayList<String>(files.size());
+        List<String> f = new ArrayList<>(files.size());
         for (File file : files) {
             f.add(file.getAbsolutePath());
         }
@@ -140,8 +140,8 @@ public class Compiler {
         if (!forceFork) {
             return useJava6Compiler(files);
         }
-        
-        List<String> list = new ArrayList<String>();
+
+        List<String> list = new ArrayList<>();
 
         // Start of honoring java.home for used javac
         String fsep = File.separator;
@@ -160,6 +160,11 @@ public class Compiler {
             // check if java.home is jre home
             javacstr = SystemPropertyAction.getProperty("java.home") + fsep + ".." + fsep + "bin" + fsep
                        + platformjavacname;
+        } else if (new File(SystemPropertyAction.getProperty("java.home") + fsep + "bin" + fsep
+                            + platformjavacname).exists()) {
+            //java9
+            javacstr = SystemPropertyAction.getProperty("java.home") + fsep + "bin" + fsep
+                + platformjavacname;
         }
         list.add(javacstr);
         // End of honoring java.home for used javac
@@ -171,6 +176,11 @@ public class Compiler {
 
         //fix for CXF-2081, set maximum heap of this VM to javac.
         list.add("-J-Xmx" + maxMemory);
+
+        if (System.getProperty("java.version").startsWith("9")) {
+            list.add("--add-modules");
+            list.add("java.activation,java.annotations.common,java.corba,java.transaction,java.xml.bind,java.xml.ws");
+        }
 
         addArgs(list);
         int classpathIdx = list.indexOf("-classpath");
@@ -195,11 +205,11 @@ public class Compiler {
         return internalJava6Compile(compiler, wrapJavaFileManager(fileManager), setupDiagnosticListener(),
                                     fileList);
     }
-    
+
     protected JavaFileManager wrapJavaFileManager(StandardJavaFileManager standardJavaFileManger) {
         return standardJavaFileManger;
     }
-    
+
     protected DiagnosticListener<JavaFileObject> setupDiagnosticListener() {
         return new DiagnosticListener<JavaFileObject>() {
             public void report(Diagnostic<? extends JavaFileObject> diagnostic) {
@@ -219,15 +229,15 @@ public class Compiler {
                     break;
                 default:
                     break;
-                }   
+                }
             }
         };
     }
-    
+
     protected boolean internalJava6Compile(JavaCompiler compiler, JavaFileManager fileManager,
                                            DiagnosticListener<JavaFileObject> listener,
                                            Iterable<? extends JavaFileObject> fileList) {
-        List<String> args = new ArrayList<String>();
+        List<String> args = new ArrayList<>();
         addArgs(args);
         CompilationTask task = compiler.getTask(null, fileManager, listener, args, null, fileList);
         Boolean ret = task.call();
@@ -326,11 +336,11 @@ public class Compiler {
         }
         return strBuffer.toString().length() > 4096 ? true : false;
     }
-    
+
     private boolean isLongClasspath(String classpath) {
         return classpath.length() > 2048 ? true : false;
-    }   
-    
+    }
+
     private void checkLongClasspath(String classpath, List<String> list, int classpathIdx) {
         if (isLongClasspath(classpath)) {
             PrintWriter out = null;
@@ -344,12 +354,12 @@ public class Compiler {
             } catch (IOException e) {
                 System.err.print("[ERROR] can't write long classpath to @argfile");
             }
-        } 
+        }
     }
 
     public void setEncoding(String string) {
         encoding = string;
     }
 
-    
+
 }
